--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:slateblue;
+    background-color: rgb(147, 180, 165);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -7,7 +7,7 @@ body {
     }
 
 .container {
-    background-color:slateblue; /* Light background to make text readable */
+    background-color: rgb(147, 180, 165); /* Light background to make text readable */
     padding: 20px;
     border-radius: 10px;
     max-width: 1800px;
